# simple-rag-server

./: .gitignore  README.md  pyproject.toml
app/: config.py  embed_model.py  llm.py  main.py  state.py
app/routers/: index.py  query.py  schema.py
app/utils/: faiss.py  index.py  storage.py
