[project]
name = "index-llama-index-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.117.1",
    "llama-index>=0.14.3",
    "llama-index-vector-stores-faiss>=0.5.1",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
